k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk007-vue-project007
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk007-vue-project007
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 02839f04f1ec4842d674985617a0e290
      labels:
        app: sk007-vue-project007
    spec:
      serviceAccountName: default
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: control-plane
                operator: In
                values:
                - "amdp"
      containers:
      - name: vue-project007
        image: amdp-registry.skala-ai.com/skala25a/sk007-vue-project007:1.0.0-1-836217d1a14b
        imagePullPolicy: Always
      tolerations:
      - effect: 
        key: control-plane
        operator: Equal
        value: "amdp"
