k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk007-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk007-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk007-replicaset-test
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: sk007-replicaset-test
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk007-replicaset-test
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: sk007-replicaset-test
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sk007-tls.skala25a.project.skala-ai.com
    secretName: sk007-manual-tls-secret
